[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Weapons/Weapon.gd" type="Script" id=1]
[ext_resource path="res://resources/tower-objects/bullets/bullet-1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sounds/fire.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.67187

[node name="Bullet" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 4.71239
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0.0757637, -0.12211 )
scale = Vector2( 0.840352, 0.832349 )
rect = Rect2( -8, -8, 16, 16 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
autoplay = true
area_mask = 4
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
